--- a/sample_config.env
+++ b/sample_config.env
@@ -1,9 +1,8 @@
-# Remove this line first before doing anything
-___________PLOX_______REMOVE_____THIS_____LINE__________=True
+# Remove this line first before doing anythin
 
 # Get these from https://my.telegram.org/
-API_KEY = "YOUR API KEY"
-API_HASH = "YOUR API HASH"
+API_KEY = 1125104
+API_HASH = bcb103d2aa5b96a0c8c686fe10dbd2cf
 
 # OpenWeather Map API Key for .weather command
 # Get from https://openweathermap.org/
@@ -46,10 +45,10 @@ LOGSPAMMER = True
 CONSOLE_LOGGER_VERBOSE = False
 
 # PM Auto-Ban Feature Switch
-PM_AUTO_BAN = False
+PM_AUTO_BAN = True
 
 # Custom Default name for .alive
-ALIVE_NAME = None
+ALIVE_NAME = True
 
 # Your Database URL
 # Example: 'postgres://userbot:userbot@localhost:5432/userbot'
