--- a/config.env
+++ b/config.env
@@ -31,7 +31,7 @@ REM_BG_API_KEY = ""
 # ChatID for the Log group
 # Add a Hypen or a Negative Sign before ID
 # This is a integer, Please don't use Strings
-BOTLOG_CHATID = # this is an integer, please don't use quotes.
+BOTLOG_CHATID = -329587889
 
 # Incase you want to turn off logging, put this to false
 BOTLOG = True
@@ -52,7 +52,8 @@ ALIVE_NAME = True
 
 # Your Database URL
 # Example: 'postgres://userbot:userbot@localhost:5432/userbot'
-DATABASE_URL = ""
+DATABASE_URL = mongodb+srv://Shadow22:1234a5678@cluster0-jzgux.mongodb.net/
+
 
 # YouTube Data API Key for .yt command
 # Get from https://console.cloud.google.com
